# Formative3-Group12-DQN

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  play.ipynb  play.py  pyproject.toml  requirements.txt  setup.py  train.ipynb  train.py
config/: README.md  config.example.yaml
logs/exp1/: monitor.csv  reward_length_log.csv
logs/exp1/DQN_exp1_1/: events.out.tfevents.1774117935.lilianegikundiro.22724.0
logs/exp1/DQN_exp1_2/: events.out.tfevents.1774120639.lilianegikundiro.256.0
logs/exp10/: monitor.csv  reward_length_log.csv
logs/exp10/DQN_exp10_1/: events.out.tfevents.1774123449.lilianegikundiro.256.9
logs/exp2/: monitor.csv  reward_length_log.csv
logs/exp2/DQN_exp2_1/: events.out.tfevents.1774121089.lilianegikundiro.256.1
logs/exp3/: monitor.csv  reward_length_log.csv
logs/exp3/DQN_exp3_1/: events.out.tfevents.1774121335.lilianegikundiro.256.2
logs/exp4/: monitor.csv  reward_length_log.csv
logs/exp4/DQN_exp4_1/: events.out.tfevents.1774121582.lilianegikundiro.256.3
logs/exp5/: monitor.csv  reward_length_log.csv
logs/exp5/DQN_exp5_1/: events.out.tfevents.1774121829.lilianegikundiro.256.4
logs/exp6/: monitor.csv  reward_length_log.csv
logs/exp6/DQN_exp6_1/: events.out.tfevents.1774122071.lilianegikundiro.256.5
logs/exp7/: monitor.csv  reward_length_log.csv
logs/exp7/DQN_exp7_1/: events.out.tfevents.1774122401.lilianegikundiro.256.6
logs/exp8/: monitor.csv  reward_length_log.csv
logs/exp8/DQN_exp8_1/: events.out.tfevents.1774122894.lilianegikundiro.256.7
logs/exp9/: monitor.csv  reward_length_log.csv
logs_archive/exp1/: monitor.csv
logs_archive/exp10/: reward_length_log.csv
logs_archive/exp2/: monitor.csv  reward_length_log.csv
logs_archive/exp5/: reward_length_log.csv
logs_archive/exp7/: monitor.csv  reward_length_log.csv
logs_archive/policy_comparison/: monitor.csv
models/dqn_model/: data
models/dqn_model_exp1/: data
models/dqn_model_exp10/: data
models/dqn_model_exp2/: system_info.txt
models/dqn_model_exp3/: data
models/dqn_model_exp4/: data
models/dqn_model_exp5/: data
models/dqn_model_exp6/: data
models/dqn_model_exp7/: data
models/dqn_model_exp8/: data
models/dqn_model_exp9/: data
notebooks/: play.ipynb
results/logs/exp1/: monitor.csv  reward_length_log.csv
scripts/: run_my_experiments.sh
src/: __init__.py  play.py  train.py
(+64 files in other folders)
