[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dqn-atari"
version = "1.0.0"
description = "Deep Q-Networks (DQN) implementation for Atari games using Stable Baselines3"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
authors = [
    {name = "Isaac Mugisha", email = "isaac@example.com"}
]
keywords = ["dqn", "atari", "reinforcement-learning", "stable-baselines3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "stable-baselines3>=2.0.0",
    "gymnasium>=0.27.0",
    "ale-py>=0.8.0",
    "numpy>=1.21.0",
    "torch>=1.9.0",
    "tensorboard>=2.8.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "opencv-python>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
notebook = [
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/Mugisha-isaac/Formative3-Group12-DQN"
Documentation = "https://github.com/Mugisha-isaac/Formative3-Group12-DQN"
Repository = "https://github.com/Mugisha-isaac/Formative3-Group12-DQN"
Issues = "https://github.com/Mugisha-isaac/Formative3-Group12-DQN/issues"

[tool.setuptools]
packages = ["dqn_atari"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=dqn_atari --cov-report=html"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
